test/libsolidity/syntaxTests/nameAndTypeResolution/continue_not_in_loop_2.sol
contract C {
    function f() public {
        while (true)
        {
        }
        continue;
    }
}
// ----
// SyntaxError: (88-96): "continue" has to be in a "for" or "while" loop.
